--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 godot-tests:
   stage: test
+  before_script:
+    - apk add --update curl && rm -rf /var/cache/apk/*
   script:
     - chmod +x run_godot_tests.sh
     - sh run_godot_tests.sh
