--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 variables:
   GODOT_VERSION: 3.2.1
-  GODOT_BIN: Godot_v$GODOT_VERSION-stable_linux_headless.64
-  GODOT_ZIP: $GODOT_BIN.zip
-  GODOT_URL: https://downloads.tuxfamily.org/godotengine/$GODOT_VERSION/$GODOT_ZIP
+  GODOT_BIN: "Godot_v$GODOT_VERSION-stable_linux_headless.64"
+  GODOT_ZIP: "$GODOT_BIN.zip"
+  GODOT_URL: "https://downloads.tuxfamily.org/godotengine/$GODOT_VERSION/$GODOT_ZIP"
 
 godot-tests:
   stage: test
