--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ godot-tests:
   before_script:
     - apk add --update curl && rm -rf /var/cache/apk/*
   script:
-    - curl ${GODOT_URL} --output ${GODOT_ZIP}
-    - unzip ${GODOT_ZIP}
-    - chmod +x ${GODOT_BIN}
-    - ./${GODOT_BIN} -d -s --path ./Godot addons/gut/gut_cmdln.gd
+    - curl $GODOT_URL --output $GODOT_ZIP
+    - unzip $GODOT_ZIP
+    - chmod +x $GODOT_BIN
+    - ./$GODOT_BIN -d -s --path ./Godot addons/gut/gut_cmdln.gd
