--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,14 @@
 godot-tests:
   stage: test
   variables:
-    GODOT_URL: "https://downloads.tuxfamily.org/godotengine/$GODOT_VERSION/$GODOT_ZIP"
-    GODOT_ZIP: "$GODOT_BIN.zip"
+    GODOT_URL: "https://downloads.tuxfamily.org/godotengine/3.2.1/Godot_v3.2.1-stable_linux_headless.64"
+    GODOT_ZIP: "Godot_v3.2.1-stable_linux_headless.64.zip"
     GODOT_BIN: "Godot_v$GODOT_VERSION-stable_linux_headless.64"
     GODOT_VERSION: "3.2.1"
   before_script:
     - apk add --update curl && rm -rf /var/cache/apk/*
   script:
-    - curl "$GODOT_URL" --output "$GODOT_ZIP"
+    - curl $GODOT_URL --output $GODOT_ZIP
     - unzip $GODOT_ZIP
     - chmod +x $GODOT_BIN
     - ./$GODOT_BIN -d -s --path ./Godot addons/gut/gut_cmdln.gd
