--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,4 +2,4 @@ godot-tests:
   stage: test
   image: barichello/godot-ci:3.2.1
   script:
-    - godot -d -s --path ./Godot addons/gut/gut_cmdln.gd
+    - godot -s --path ./Godot addons/gut/gut_cmdln.gd
