Use python 3.7 as image for pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ godot-tests:
 
 codestyle-lint:
   stage: test
-  image: python:3.6.10-alpine3.11
+  image: python:3.7
   script:
     - pip install gdtoolkit
     - cd Godot
