Remove export presets from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -341,7 +341,7 @@ Temporary Items
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+# export_presets.cfg
 
 # Mono-specific ignores
 .mono/
