--- a/Godot/export_presets.cfg
+++ b/Godot/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.xml"
+include_filter="*.xml, haarcascade_frontalface_default.xml, bin/haarcascade_frontalface_default.xml"
 exclude_filter=""
 export_path="bin/DefuseTheBomb.dmg"
 patch_list=PoolStringArray(  )
