--- a/Godot/export_presets.cfg
+++ b/Godot/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.xml, haarcascade_frontalface_default.xml, bin/haarcascade_frontalface_default.xml"
 exclude_filter=""
-export_path="bin/DefuseTheBomb.dmg"
+export_path="bin/Dismental.dmg"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -16,7 +16,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-application/name="DefuseTheBomb"
+application/name="Dismental"
 application/info="Made with Godot Engine"
 application/icon=""
 application/identifier=""
